# NTPoly

./: CMakeLists.txt
Interface/: CMakeLists.txt  blocks.inp  input.mtx  local.f90  mata.mtx  matb.mtx  matc.mtx  output.mtx
